--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,6 +14,10 @@
   .dashboardTitle {
     @apply text-gray-500 mx-auto max-w-3xl mt-10 mb-5;
   }
+
+  .AppBodyContainer {
+    @apply flex-grow max-h-[90vh] mainBody overflow-y-scroll pb-20;
+  }
 }
 
 .mainBody::-webkit-scrollbar {
@@ -21,7 +25,7 @@
   width: 8px;
 }
 
-.mainBody::-webkit-scrollbar-track {
+.mainBody::-webkit-scrollbar-thumb {
   background-color: #626e7e;
   border-radius: 12px;
 }
