--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,7 +16,7 @@
   }
 
   .AppBodyContainer {
-    @apply flex-grow max-h-[90vh] mainBody overflow-y-scroll pb-20 px-10 md:px-0;
+    @apply flex-grow  lg:max-h-screen max-h-[90vh] mainBody overflow-y-scroll pb-20 px-6 sm:px-10 lg:px-0 pt-5 lg:pt-10;
   }
 
   .coinInfoKey {
